# numerical-methods

./: CMakeLists.txt  README.md
1.1/: CMakeLists.txt  a.out  main.cpp  task.txt
1.2/: CMakeLists.txt  a.out  main.cpp  matrix.txt  task.txt  test.txt  test2.txt
1.3/: CMakeLists.txt  graph.py  main.cpp  matrix.txt
1.4/: CMakeLists.txt  main.cpp  matrix.txt  notes
2.1/: CMakeLists.txt  main.cpp  other
2.2/: CMakeLists.txt  main.cpp
3.1/: CMakeLists.txt  main.cpp
3.2/: CMakeLists.txt  main.cpp
3.3/: main.cpp
3.4/: CMakeLists.txt  main.cpp
3.5/: CMakeLists.txt  main.cpp
4.1/: CMakeLists.txt  main.cpp
puk/: CMakeLists.txt  antoine.py  approximation.py  comparison.py  formula.py  gas_comparison.py  gas_data.txt  main.cpp  water_comparison.py  water_data.txt
