cmake_minimum_required(VERSION 3.10)
project(numerical_methods)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)

include_directories("/opt/homebrew/Cellar/eigen/3.4.0_1/include/eigen3")

# add_subdirectory(1.1)
# add_subdirectory(1.2)
# add_subdirectory(1.3)
# add_subdirectory(1.4)
# add_subdirectory(2.1)
# add_subdirectory(2.2)
# add_subdirectory(3.1)
# add_subdirectory(3.2)
# add_subdirectory(3.3)
# add_subdirectory(3.4)
# add_subdirectory(3.5)
# add_subdirectory(4.1)
add_subdirectory(puk)